--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"private": true,
-	"name": "healthEstimate",
+	"name": "healthEstimate2",
 	"version": "2.4.0",
 	"description": "",
 	"scripts": {
